<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.senac.esteban.caixaremediosapp.PrincipalActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menuPrincipal"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_Gerenciar"
        android:drawableLeft="@drawable/icongerenciar"
        android:background="@drawable/buttom_back"
        android:id="@+id/bt_gerenciar"

        android:onClick="chamarTela"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_verFarmacias"
        android:background="@drawable/buttom_back"
        android:id="@+id/bt_verFarmacia"
        android:drawableLeft="@drawable/iconebuscar"
        android:onClick="chamarTela"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_Remedios"
        android:background="@drawable/buttom_back"
        android:drawableLeft="@drawable/iconever"
        android:id="@+id/bt_verRemedios"
        android:onClick="chamarTela"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttom_back"
        android:text="@string/bt_fechar"
        android:drawableLeft="@drawable/exitfinal"
        android:id="@+id/bt_fechar"
        android:onClick="chamarTela"/>


</LinearLayout>
